Issue #16215: Fix potential double memory free in str.replace(). Patch by Serhiy Storchaka.